adil dima paper

--- a/index.html
+++ b/index.html
@@ -297,6 +297,29 @@ All laureates in the nomination “Young Researchers” have already managed to 
 <br>
 
 <span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2006.11773">"Optimal and Practical Algorithms for Smooth and Strongly Convex Decentralized Optimization"</a> -
+joint work with <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> and <a href="https://adil-salim.github.io">Adil Salim</a>.<br>
+<br>
+
+Abstract: <i>
+We consider the task of decentralized minimization of the sum of smooth strongly convex functions stored across the nodes a network. For this problem, lower bounds on the number of gradient computations and the number of communication rounds required to achieve ε accuracy have recently been proven. We propose two new algorithms for this decentralized optimization problem and equip them with complexity guarantees. We show that our first method is optimal both in terms of the number of communication rounds and in terms of the number of gradient computations. Unlike existing optimal algorithms, our algorithm does not rely on the expensive evaluation of dual gradients. Our second algorithm is optimal in terms of the number of communication rounds, without a logarithmic factor. Our approach relies on viewing the two proposed algorithms as accelerated variants of the Forward Backward algorithm to solve monotone inclusions associated with the decentralized optimization problem. We also verify the efficacy of our methods against state-of-the-art algorithms through numerical experiments.
+</i> <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>June 23, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2006.11573">"Unified Analysis of Stochastic Gradient Methods for Composite Convex and Smooth Optimization"</a> -
 joint work with <a href="https://rka97.github.io">Ahmed Khaled</a>, <a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a>,
 <a href="https://www.maths.ed.ac.uk/~s1461357/">Nicolas Loizou</a>, and <a href="https://gowerrobert.github.io">Robert M. Gower</a>.<br>
