--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
 
 
 
+
+<h3>August 25, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2008.10898">"PAGE: A Simple and Optimal Probabilistic Gradient Estimator for Nonconvex Optimization"</a> -
+joint work with <a href="https://zhizeli.github.io">Zhize Li</a>, <a href="https://mine.kaust.edu.sa/Pages/Hongyan.aspx">Hongyan Bao</a>,  and <a href="https://scholar.google.com/citations?user=BhRJe4wAAAAJ&hl=en">Xiangliang Zhang</a>.<br>
+<br>
+
+
+Abstract: <i>
+In this paper, we propose a novel stochastic gradient estimator---ProbAbilistic Gradient Estimator (PAGE)---for nonconvex optimization. PAGE is easy to implement as it is designed via a small adjustment to vanilla SGD: in each iteration, PAGE uses the vanilla minibatch SGD update with probability p and reuses the previous gradient with a small adjustment, at a much lower computational cost, with probability 1−p. We give a simple formula for the optimal choice of p. We prove tight lower bounds for nonconvex problems, which are of independent interest. Moreover, we prove matching upper bounds both in the finite-sum and online regimes, which establish that Page is an optimal method. Besides, we show that for nonconvex functions satisfying the Polyak-Łojasiewicz (PL) condition, PAGE can automatically switch to a faster linear convergence rate. Finally, we conduct several deep learning experiments (e.g., LeNet, VGG, ResNet) on real datasets in PyTorch, and the results demonstrate that PAGE converges much faster than SGD in training and also achieves the higher test accuracy, validating our theoretical results and confirming the practical superiority of PAGE.
+</i> <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>August 25, 2020</h3>
 <h1>Apple Virtual Workshop on Privacy Preserving Machine Learning</h1>
 <br>
