--- a/i_papers.html
+++ b/i_papers.html
@@ -55,10 +55,10 @@
           <b>PAGE: A simple and optimal probabilistic gradient estimator for nonconvex optimization</b><br>
           [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [code: PAGE]  <br>
           <br>
-          
+
           [137] Dmitry Kovalev, Adil Salim, and Peter Richtárik <br>
           <b>Optimal and practical algorithms for smooth and strongly convex decentralized optimization</b><br>
-          [<a href="https://arxiv.org/abs/2006.11773">arXiv</a>] [code: APAPC, OPAPC, Algorihm 3]  <br>
+          [<a href="https://arxiv.org/abs/2006.11773">arXiv</a>] [code: APAPC, OPAPC, Algorithm 3]  <br>
           <br>
 
           [136] Ahmed Khaled, Othmane Sebbouh, Nicolas Loizou, Robert M. Gower, and Peter Richtárik <br>
@@ -221,6 +221,7 @@
 
           [110] Xun Qian, Zheng Qu and Peter Richtárik<br>
           <b>L-SVRG and L-Katyusha with arbitrary sampling</b><br>
+          Accepted to Journal of Machine Learning Research <br>
           [<a href="https://arxiv.org/abs/1906.01481">arXiv</a>] [code: L-SVRG, L-Katyusha]<br>
           <br>
 
