--- a/index.html
+++ b/index.html
@@ -43,6 +43,80 @@
         <div id="content">
 
 
+https://www.youtube.com/watch?v=4lGjecpVWzE
+
+
+<h3>September 22, 2020</h3>
+<h1>Adil Salim Giving a Virtual Talk at the Fields Institute</h1>
+<br>
+
+<a href="https://adil-salim.github.io">Adil Salim</a> is giving a talk today at the <a href="http://www.fields.utoronto.ca/activities/20-21/dynamical">Second Symposium on Machine Learning and Dynamical Systems</a>, organized at the Fields Institute.
+His talk "Primal Dual interpretation of the Proximal Gradient Langevin algorithm", based on <a href="https://arxiv.org/abs/2006.09270">this paper</a>, is <a href="https://www.youtube.com/watch?v=4lGjecpVWzE">available
+on YouTube</a>.
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>August 30, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+The Fall 2020 semester started. I am teaching CS 331: Stochastic Gradient Descent Methods.
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>September 15, 2020</h3>
+<h1>Four New Group Members</h1>
+<br>
+
+Four new people joined my team in August/September 2020:
+<br><br>
+
+Konstantin Burlachenko (@Konstantin Burlachenko) joins as a CS PhD student. Konstantin got a Master’s degree in CS and Control Systems from Bauman Moscow State University in 2009. He has since worked at a number of companies, most recently as a Senior Developer at Yandex and NVidia and a Principal Engineer at Huawei. Konstantin is interested in software development, optimization, federated learning, graphics and vision, and forecasting models. Konstantin attended several courses at Stanford and obtained two graduate certificates [<a href="https://online.stanford.edu/programs/data-models-and-optimization-graduate-certificate">1</a>] [<a href="https://online.stanford.edu/programs/artificial-intelligence-graduate-certificate">2</a>]:
+
+<br>
+<br>
+Grigory Malinovsky joins as an MS/PhD student in AMCS after a successful internship at KAUST in early 2020 which led to the paper <a href="https://proceedings.icml.cc/static/paper_files/icml/2020/5019-Paper.pdf">“From Local SGD to Local Fixed-Point Methods for Federated Learning</a>, joint with Dmitry Kovalev, Elnur Gasanov, Laurent Condat and myself.
+The paper appeared in ICML 2020.  https://scholar.google.com/citations?user=4w2W9KQAAAAJ&hl=ru Grisha has graduated with a BS degree from Moscow Institute of Physics and Technology (MIPT) with a thesis entitled “Averaged Heavy Ball Method” under the supervision of Boris Polyak. Among Grigory’s successes belong:
+<br>
+- Abramov’s scholarship for students with the best grades at MIPT, 2016
+<br>
+- Participant in the final round of All-Russian Physics Olympiad, 2014
+<br>
+- Bronze medal at International Zhautykov Olympiad in Physics, 2014
+<br>
+- Prize winner in the final round of All-Russian Physics Olympiad, 2013
+<br>
+Grisha enjoys basketball, fitness, football and table tennis. He speaks a bit of Tatar (and hence can presumably converse with @Rustem Islamov?).
+
+<br><br>
+Igor Sokolov joins as an MS student in AMCS. Igor has a BS degree from MIPT’s Department of Control and Applied Mathematics. Igor is the recipient of several prizes, including at the Phystech Olympiad in Physics (2014), and regional stage of the All Russian Olympiad in Physics (2014). He won 2nd place at the Programming Conference (2012 and 2013) and was a winner of the Programming Olympiad (2011); all at the Computer Training Center. Igor enjoys snowboarding, cycling and jogging. He coauthored a paper which will soon be posted onto arXiv.
+
+<br><br>
+Bokun Wang joins as a remote intern and will work in the lab for 6 months. Bokun coauthored several papers, including “Riemannian Stochastic Proximal Gradient Methods for Nonsmooth Optimization over the Stiefel Manifold” https://arxiv.org/abs/2005.01209. He has recently interned in the lab of Prof Tong Zhang and coauthored a paper that was submitted to AAAI. Bokun is a graduate student at UC Davis, and has a BS degree in Computer Science from University of Electronic Science and Technology of China.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 
 <h3>August 25, 2020</h3>
