--- a/i_team.html
+++ b/i_team.html
@@ -69,7 +69,7 @@
           <h2>PhD Students </h2>
           <ul>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur Gasanov</a> (1/2020-present)</li>
+            <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
             <li><a href="http://www.ali-sa.org/">Alibek Sailanbayev</a>  (1/2019-present)</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
@@ -107,7 +107,7 @@
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li> Sarah Sachs (Technical University Munich), 3/2018-8/2018<br> </li>
             <li><a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018<br>   </li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur Gasanov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018 </li>
+            <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018 </li>
             <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (Comenius University), 1/2018-2/2018<br> </li>
             <li>Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
@@ -117,8 +117,7 @@
           <h2>Visitors</h2>
 
           <ul>
-            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
-              11/2019</li>
+            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 11/2019</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (Grenoble), 11-12/2019</li>
             <li><a href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian Li</a> (Nanyang Technological University), 9/2019<br> </li>
             <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier Bresson</a> (NTU Singapore), 4/2019<br> </li>
