--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <h1>Adil Salim Giving a Virtual Talk at the Fields Institute</h1>
 <br>
 
-<a href="https://adil-salim.github.io">Adil Salim</a> is giving a talk today at the <a href="http://www.fields.utoronto.ca/activities/20-21/dynamical">Second Symposium on Machine Learning and Dynamical Systems</a>, organized at the Fields Institute.
-His talk "Primal Dual interpretation of the Proximal Gradient Langevin algorithm", based
+<a href="https://adil-salim.github.io">Adil Salim</a> is giving a virtual talk today at the <a href="http://www.fields.utoronto.ca/activities/20-21/dynamical">Second Symposium on Machine Learning and Dynamical Systems</a>, organized at the Fields Institute.
+His talk "Primal Dual Interpretation of the Proximal Gradient Langevin Algorithm", based
 on <a href="https://arxiv.org/abs/2006.09270">this paper</a>, is <a href="https://www.youtube.com/watch?v=4lGjecpVWzE">available
 on YouTube</a>. <br>
 
@@ -65,7 +65,7 @@ on YouTube</a>. <br>
 
 
 <h3>August 30, 2020</h3>
-<h1>New Paper</h1>
+<h1>Fall 2020 Teaching</h1>
 <br>
 
 The Fall 2020 semester started. I am teaching CS 331: Stochastic Gradient Descent Methods. <br>
@@ -95,10 +95,9 @@ Stanford and obtained two graduate certificates [<a href="https://online.stanfor
 
 <br>
 <br>
-<b>Grigory Malinovsky</b> joins as an MS/PhD student in AMCS after a successful internship at KAUST in early 2020 which led to
-the paper <a href="https://proceedings.icml.cc/static/paper_files/icml/2020/5019-Paper.pdf">“From Local SGD to Local Fixed-Point Methods for Federated Learning</a>, joint with Dmitry Kovalev, Elnur Gasanov, Laurent Condat and myself.
-The paper appeared in ICML 2020.  Grisha has graduated with a BS degree
-from Moscow Institute of Physics and Technology (MIPT) with a thesis entitled “Averaged Heavy Ball Method” under the supervision of Boris Polyak.
+<b>Grigory Malinovsky</b> joins as an MS/PhD student in <a href="https://cemse.kaust.edu.sa/amcs">AMCS</a>  after a successful internship at KAUST in early 2020 which led to
+the paper <a href="https://proceedings.icml.cc/static/paper_files/icml/2020/5019-Paper.pdf">“From Local SGD to Local Fixed-Point Methods for Federated Learning"</a>,
+joint with <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="http://elnurgasanov.me">Elnur Gasanov</a>, Laurent Condat and myself. The paper appeared in ICML 2020.  Grisha has graduated with a BS degree from Moscow Institute of Physics and Technology (MIPT) with a thesis entitled “Averaged Heavy Ball Method” under the supervision of Boris Polyak.
 Among Grigory’s successes belong:
 <br>
 - Abramov’s scholarship for students with the best grades at MIPT, 2016
@@ -112,14 +111,14 @@ Among Grigory’s successes belong:
 Grisha enjoys basketball, fitness, football and table tennis. He speaks a bit of Tatar.
 
 <br><br>
-<b>Igor Sokolov</b> joins as an MS student in AMCS. Igor has a BS degree from MIPT’s Department of Control and Applied Mathematics. Igor is the recipient of several
-prizes, including at the Phystech Olympiad in Physics (2014), and regional stage of the All Russian Olympiad in Physics (2014). He won 2nd place at the Programming
-Conference (2012 and 2013) and was a winner of the Programming Olympiad (2011); all at the Computer Training Center. Igor enjoys snowboarding, cycling and
-jogging. He coauthored a paper which will soon be posted onto arXiv.
+<b>Igor Sokolov</b> joins as an MS student in <a href="https://cemse.kaust.edu.sa/amcs">AMCS.</a> Igor has a BS degree from MIPT’s Department of Control and
+Applied Mathematics. Igor is the recipient of several prizes, including at the Phystech Olympiad in Physics (2014), and regional stage of the All Russian
+Olympiad in Physics (2014). He won 2nd place at the Programming Conference (2012 and 2013) and was a winner of the Programming Olympiad (2011); all at the
+Computer Training Center. Igor enjoys snowboarding, cycling and jogging. He coauthored a paper which will soon be posted onto arXiv.
 
 <br><br>
 <b>Bokun Wang</b> joins as a remote intern and will work in the lab for 6 months. Bokun coauthored several papers, including <a href="https://arxiv.org/abs/2005.01209">
-“Riemannian Stochastic Proximal Gradient Methods for Nonsmooth Optimization over the Stiefel Manifold”.</a> He has recently interned with Tong Zhang (HKUST).
+``Riemannian Stochastic Proximal Gradient Methods for Nonsmooth Optimization over the Stiefel Manifold”.</a> He has recently interned with Tong Zhang (HKUST).
 Bokun is a graduate student at UC Davis, and has a BS degree in Computer Science from University of Electronic Science and Technology of China.
 <br>
 
