--- a/i_talks.html
+++ b/i_talks.html
@@ -48,7 +48,9 @@
 <h1> Future Talks</h1>
 
 
-
+<p>
+"Optimization for Machine Learning", <a href="https://ima.org.uk/14347/14347/">3rd Mathematics of Operational Research conference</a>, Aston University, Birmingham (UK),  April 22-23, 2021
+</p>
 
 <p>
 <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
@@ -78,10 +80,6 @@ Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="import
 
 
 <p>
-Apple's Workshop on Privacy Preserving Machine Learning, August 25-26, 2020 (invited)
-</p>
-
-<p>
 2020 Workshop on Federated Learning and Analytics, Google, Seattle, July 30-31, 2020 (invited)
 </p>
 
@@ -103,8 +101,6 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 <p>
 <a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span> (accepted <a href="https://arxiv.org/abs/1905.13278">paper</a>)
 </p>
-
-
 
 
 
@@ -191,13 +187,14 @@ Simons Institute, Berkeley, 10/2013
 
 
 
-
+<p>
+[171] Apple's Workshop on Privacy Preserving Machine Learning, August 25-26, 2020 (invited)
+</p>
 
 <p>
 [170]
 Talk "Fast Linear Convergence of Randomized BFGS" @
 <a href="https://icml.cc">ICML 2020</a> <a href="https://sites.google.com/view/optml-icml2020">Workshop: "Beyond First Order Methods in ML Systems"</a>, Vienna, Austria, July  2020 (plenary). [<a href="talks/TALK-2020-07-RBFGS-ICML-workshop.pdf">slides</a>]</p>
-
 
 <p>
 [169]
