--- a/i_papers.html
+++ b/i_papers.html
@@ -556,9 +556,8 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
           <h1> Prepared in 2017</h1>
 
           [65] Nicolas Loizou and Peter Richtárik<br>
-          <b>Momentum and stochastic momentum for stochastic gradient,
-            Newton, proximal point and subspace descent methods</b><br>
-            To appear in Computational Optimization and Applications (COAP) <br>
+          <b>Momentum and stochastic momentum for stochastic gradient, Newton, proximal point and subspace descent methods</b><br>
+            <a href="http://link.springer.com/article/10.1007/s10589-020-00220-z">Computational Optimization and Applications, 1-58</a> <br>
           [<a href="https://arxiv.org/abs/1712.09677">arXiv</a>]<br>
           <br>
 
