--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
 
 
 
+<h3>September 28, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/1901.09997v4">"Quasi-Newton Methods for Deep Learning: Forget the Past, Just Sample"</a> -
+joint work with <a href="https://ioe.engin.umich.edu/people/albert-s-berahas/">Albert S. Berahas</a>,
+<a href="https://coral.ise.lehigh.edu/maj316/">Majid Jahani</a>,  and <a href="http://mtakac.com">Martin Takáč</a>.<br>
+<br>
+
+
+Abstract: <i>
+We present two sampled quasi-Newton methods for deep learning: sampled LBFGS (S-LBFGS) and sampled LSR1 (S-LSR1). Contrary to the classical variants of these methods that sequentially build Hessian or inverse Hessian approximations as the optimization progresses, our proposed methods sample points randomly around the current iterate at every iteration to produce these approximations. As a result, the approximations constructed make use of more reliable (recent and local) information, and do not depend on past iterate information that could be significantly stale. Our proposed algorithms are efficient in terms of accessed data points (epochs) and have enough concurrency to take advantage of parallel/distributed computing environments. We provide convergence guarantees for our proposed methods. Numerical tests on a toy classification problem as well as on popular benchmarking neural network training tasks reveal that the methods outperform their classical variants.
+</i> <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 <h3>September 22, 2020</h3>
