--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,11 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [139] Albert S. Berahas, Majid Jahani, Peter Richtárik, and Martin Takáč<br>
+          <b>Quasi-Newton methods for deep learning: forget the past, just sample</b><br>
+          [<a href="https://arxiv.org/abs/1901.09997v4">arXiv</a>] [code: S-LBFGS, S-LSR1]  <br>
+          <br>
+
           [138] Zhize Li, Hongyan Bao, Xiangliang Zhang and Peter Richtárik <br>
           <b>PAGE: A simple and optimal probabilistic gradient estimator for nonconvex optimization</b><br>
           [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [code: PAGE]  <br>
@@ -550,9 +555,9 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
             problems: conditioning and convergence rates</b><br>
           <a href="https://epubs.siam.org/doi/abs/10.1137/18M1167061">SIAM Journal on Optimization 29(4):2814–2852, 2019</a><br>
           [<a href="https://arxiv.org/abs/1801.04873">arXiv</a>] [<a href="talks/TALK-ISMP2018-StochFeas.pdf">slides</a>]
-
-
           <br> <br>
+
+
           <h1> Prepared in 2017</h1>
 
           [65] Nicolas Loizou and Peter Richtárik<br>
