--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <h1>Eduard Gorbunov Organizes All-Russian Optimization Research Seminar</h1>
 <br>
 
-My serial intern and collaborator <a href="https://adil-salim.github.io">Eduard Gorbunov</a> is the organizer of an <a href="http://www.mathnet.ru/php/conference.phtml?&eventID=31&confid=1794&option_lang=rus">All-Russian
-Research Seminar Series on Mathematical Optimization.</a> There have been 14 speakers at this event so far, including Eduard and <a href="https://konstmish.github.io">Konstantin 
+My serial intern and collaborator <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> is the organizer of an <a href="http://www.mathnet.ru/php/conference.phtml?&eventID=31&confid=1794&option_lang=rus">All-Russian
+Research Seminar Series on Mathematical Optimization.</a> There have been 14 speakers at this event so far, including Eduard and <a href="https://konstmish.github.io">Konstantin
   Mishchenko.</a> <br>
 
 <br>
