--- a/index.html
+++ b/index.html
@@ -44,6 +44,29 @@
 
 
 
+<h3>October 2, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2010.00091">"Error Compensated Distributed SGD Can Be Accelerated"</a> -
+joint work with <a href="https://qianxunk.github.io">Xun Qian</a> and
+<a href="https://www.cse.ust.hk/admin/people/faculty/profile/tongzhang">Tong Zhang</a>.<br>
+<br>
+
+
+Abstract: <i>
+Gradient compression is a recent and increasingly popular technique for reducing the communication cost in distributed training of large-scale machine learning models. In this work we focus on developing efficient distributed methods that can work for any compressor satisfying a certain contraction property, which includes both unbiased (after appropriate scaling) and biased compressors such as RandK and TopK. Applied naively, gradient compression introduces errors that either slow down convergence or lead to divergence. A popular technique designed to tackle this issue is error compensation/error feedback. Due to the difficulties associated with analyzing biased compressors, it is not known whether gradient compression with error compensation can be combined with Nesterov's acceleration. In this work, we show for the first time that error compensated gradient compression methods can be accelerated. In particular, we propose and study the error compensated loopless Katyusha method, and establish an accelerated linear convergence rate under standard assumptions. We show through numerical experiments that the proposed method converges with substantially fewer communication rounds than previous error compensated algorithms.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 
 <h3>September 30, 2020</h3>
