--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,11 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [140] Xun Qian, Peter Richtárik, and Tong Zhang<br>
+          <b>Error compensated distributed SGD can be accelerated</b><br>
+          [<a href="https://arxiv.org/abs/2010.00091">arXiv</a>] [code: ECLK]  <br>
+          <br>
+          
           [139] Albert S. Berahas, Majid Jahani, Peter Richtárik, and Martin Takáč<br>
           <b>Quasi-Newton methods for deep learning: forget the past, just sample</b><br>
           [<a href="https://arxiv.org/abs/1901.09997v4">arXiv</a>] [code: S-LBFGS, S-LSR1]  <br>
