--- a/index.html
+++ b/index.html
@@ -44,6 +44,56 @@
 
 
 
+
+<h3>October 2, 2020</h3>
+<h1>New Paper </h1>
+<br>
+
+<span class="important">New paper out: </span>
+<a href="https://arxiv.org/abs/2010.00952">"Distributed proximal splitting algorithms with rates and acceleration"</a> -
+joint work with <a href="https://lcondat.github.io">Laurent Condat</a> and Grigory Malinovsky.<br>
+<br>
+
+
+Abstract: <i>
+We analyze several generic proximal splitting algorithms well suited for large-scale convex nonsmooth optimization. We derive sublinear and linear convergence results with new rates on the function value suboptimality or distance to the solution, as well as new accelerated versions, using varying stepsizes. In addition, we propose distributed variants of these algorithms, which can be accelerated as well. While most existing results are ergodic, our nonergodic results significantly broaden our understanding of primal-dual optimization algorithms.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>October 2, 2020</h3>
+<h1>New Paper </h1>
+<br>
+
+<span class="important">New paper out: </span>
+<a href="https://arxiv.org/abs/2010.00892">"Variance-Reduced Methods for Machine Learning"</a> -
+joint work with <a href="https://gowerrobert.github.io">Robert Mansel Gower</a>,
+<a href="https://scholar.google.com/citations?user=5BtEUJcAAAAJ&hl=en">Mark Schmidt</a> and <a href="https://www.di.ens.fr/~fbach/">Francis Bach</a>.<br>
+<br>
+
+
+Abstract: <i>
+Stochastic optimization lies at the heart of machine learning, and its cornerstone is stochastic gradient descent (SGD), a method introduced over 60 years ago. The last 8 years have seen an exciting new development: variance reduction (VR) for stochastic optimization methods. These VR methods excel in settings where more than one pass through the training data is allowed, achieving a faster convergence than SGD in theory as well as practice. These speedups underline the surge of interest in VR methods and the fast-growing body of work on this topic. This review covers the key principles and main developments behind VR methods for optimization with finite data sets and is aimed at non-expert readers. We focus mainly on the convex setting, and leave pointers to readers interested in extensions for minimizing non-convex functions.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>October 2, 2020</h3>
 <h1>New Paper </h1>
 <br>
