--- a/i_papers.html
+++ b/i_papers.html
@@ -51,11 +51,22 @@
 
           <h1> Prepared in 2020 </h1>
 
+
+          [142] Laurent Condat, Grigory Malinovsky, and Peter Richtárik<br>
+          <b>Distributed proximal splitting algorithms with rates and acceleration</b><br>
+          [<a href="https://arxiv.org/abs/2010.00952">arXiv</a>]   <br>
+          <br>
+
+          [141] Robert M. Gower, Mark Schmidt, Francis Bach and Peter Richtárik<br>
+          <b>Variance-reduced methods for machine learning</b><br>
+          [<a href="https://arxiv.org/abs/2010.00892">arXiv</a>]   <br>
+          <br>
+
           [140] Xun Qian, Peter Richtárik, and Tong Zhang<br>
           <b>Error compensated distributed SGD can be accelerated</b><br>
           [<a href="https://arxiv.org/abs/2010.00091">arXiv</a>] [code: ECLK]  <br>
           <br>
-          
+
           [139] Albert S. Berahas, Majid Jahani, Peter Richtárik, and Martin Takáč<br>
           <b>Quasi-Newton methods for deep learning: forget the past, just sample</b><br>
           [<a href="https://arxiv.org/abs/1901.09997v4">arXiv</a>] [code: S-LBFGS, S-LSR1]  <br>
