--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,15 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [144] Alyazeed Albasyoni, Mher Safaryan, Laurent Condat, and Peter Richtárik<br>
+          <b>Optimal gradient compression for distributed and federated learning</b><br>
+          [<a href="https://arxiv.org/abs/2010.03246">arXiv</a>]   <br>
+          <br>
+
+          [143] Filip Hanzely, Slavomír Hanzely, Samuel Horváth, and Peter Richtárik<br>
+          <b>Lower bounds and optimal algorithms for personalized federated learning</b><br>
+          [<a href="https://arxiv.org/abs/2010.02372">arXiv</a>] [code: APGD1, APGD2, IAPGD, AL2SGD+]  <br>
+          <br>
 
           [142] Laurent Condat, Grigory Malinovsky, and Peter Richtárik<br>
           <b>Distributed proximal splitting algorithms with rates and acceleration</b><br>
