--- a/i_team.html
+++ b/i_team.html
@@ -51,7 +51,7 @@
 
           <h2>Research Scientists </h2>
           <ul>
-            <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (02/2020-present) </li>
+            <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (2/2020-present) </li>
             <li><a href="https://lcondat.github.io">Laurent Condat</a> (11/2019-present) </li>
           </ul>
 
@@ -68,6 +68,7 @@
 
           <h2>PhD Students </h2>
           <ul>
+            <li><a href="https://cemse.kaust.edu.sa/news/meet-kaust-student-konstantin-burlachenko?fbclid=IwAR2KCPy-X1C4Ls8u9rhlkNwqdRqONaKPqHdXzmBq_lSNDpOjGxVBM-o0DZE">Konstantin Burlachenko</a> (08/2020-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
@@ -78,6 +79,8 @@
 
           <h2>MS Students </h2>
           <ul>
+            <li>Igor Sokolov (8/2020-present)</li>
+            <li><a href="https://scholar.google.com/citations?user=4w2W9KQAAAAJ&hl=ru">Grigory Malinovsky</a> (8/2020-present)</li>
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-present)</li>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (8/2019-present)</li>
@@ -89,9 +92,10 @@
 
           <h2> Research Interns</h2>
           <ul>
-            <li>Wenlin Chen (University of Manchester), 8/2020-present</li>
+            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-present<br> </li>
+            <li>Wenlin Chen (University of Manchester & University of Cambridge), 8/2020-present</li>
             <li>Rustem Islamov (Moscow Institute of Physics and Technology), 6/2020-present</li>
-            <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-present</li>
+            <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-6/2020</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-present</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
