--- a/i_papers.html
+++ b/i_papers.html
@@ -58,6 +58,7 @@
 
           [143] Filip Hanzely, Slavomír Hanzely, Samuel Horváth, and Peter Richtárik<br>
           <b>Lower bounds and optimal algorithms for personalized federated learning</b><br>
+          NeurIPS 2020 <br>
           [<a href="https://arxiv.org/abs/2010.02372">arXiv</a>] [code: APGD1, APGD2, IAPGD, AL2SGD+]  <br>
           <br>
 
@@ -88,6 +89,7 @@
 
           [137] Dmitry Kovalev, Adil Salim, and Peter Richtárik <br>
           <b>Optimal and practical algorithms for smooth and strongly convex decentralized optimization</b><br>
+          NeurIPS 2020 <br>
           [<a href="https://arxiv.org/abs/2006.11773">arXiv</a>] [code: APAPC, OPAPC, Algorithm 3]  <br>
           <br>
 
@@ -104,6 +106,7 @@
 
           [134] Adil Salim and Peter Richtárik <br>
           <b>Primal dual interpretation of the proximal stochastic gradient Langevin algorithm</b><br>
+          NeurIPS 2020 <br>
           [<a href="https://arxiv.org/abs/2006.09270">arXiv</a>] [code: PGSLA]  <br>
           <br>
 
@@ -115,6 +118,7 @@
 
           [132] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik <br>
           <b>Random reshuffling: simple analysis with vast improvements</b><br>
+          NeurIPS 2020 <br>
           [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>]  [<a href="https://github.com/konstmish/random_reshuffling">code</a>: RR, SO, IG] <br>
           <br>
 
