OR Society Award

--- a/i_papers.html
+++ b/i_papers.html
@@ -371,8 +371,7 @@
           [95] Amedeo Sapio, Marco Canini, Chen-Yu Ho, Jacob Nelson,
           Panos Kalnis, Changhoon Kim, Arvind Krishnamurthy, Masoud
           Moshref, Dan R. K. Ports and Peter Richtárik<br>
-          <b>Scaling distributed machine learning with in-network
-            aggregation</b><br>
+          <b>Scaling distributed machine learning with in-network aggregation</b><br>
           [<a href="https://arxiv.org/abs/1903.06701">arXiv</a>] [code:
           SwitchML]<br>
           <br>
