--- a/index.html
+++ b/index.html
@@ -45,6 +45,26 @@
 
 
 
+<h3>October 16, 2020</h3>
+<h1>Nicolas Loizou runner-up in OR Society Doctoral Award</h1>
+<br>
+
+
+<a href="https://nicolasloizou.github.io/">Nicolas Loizou</a>, my former PhD student (and last student to have graduated from Edinburgh after I left for KAUST), has been selected as a runner-up in the <a href="https://www.theorsociety.com/membership/awards-medals-and-scholarships/the-doctoral-award/previous-awards/">2019
+OR Society Doctoral Award</a> competition. Congratuations! <br><br>
+
+Nicolas' PhD thesis: <a href="https://arxiv.org/abs/1909.12176">Randomized Iterative Methods for Linear Systems: Momentum, Inexactness and Gossip</a>
+
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>October 7, 2020</h3>
 <h1>New Paper</h1>
