--- a/i_papers.html
+++ b/i_papers.html
@@ -53,11 +53,13 @@
 
           [144] Alyazeed Albasyoni, Mher Safaryan, Laurent Condat, and Peter Richtárik<br>
           <b>Optimal gradient compression for distributed and federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.03246">arXiv</a>]   <br>
           <br>
 
           [143] Filip Hanzely, Slavomír Hanzely, Samuel Horváth, and Peter Richtárik<br>
           <b>Lower bounds and optimal algorithms for personalized federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           NeurIPS 2020 <br>
           [<a href="https://arxiv.org/abs/2010.02372">arXiv</a>] [code: APGD1, APGD2, IAPGD, AL2SGD+]  <br>
           <br>
@@ -69,6 +71,7 @@
 
           [141] Robert M. Gower, Mark Schmidt, Francis Bach and Peter Richtárik<br>
           <b>Variance-reduced methods for machine learning</b><br>
+          To appear in Proceedings of the IEEE <br>
           [<a href="https://arxiv.org/abs/2010.00892">arXiv</a>]   <br>
           <br>
 
