--- a/i_team.html
+++ b/i_team.html
@@ -126,14 +126,14 @@
             <li><a href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian Li</a> (Nanyang Technological University), 9/2019<br> </li>
             <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier Bresson</a> (NTU Singapore), 4/2019<br> </li>
             <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br> </li>
-            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a> (Edinburgh), 4/2019-5/2019</li>
+            <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li><a href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry Kamzolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 12/2018</li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10-11/2018</li>
             <li><a href="https://vision.in.tum.de/members/moellenh">Thomas Möllenhoff</a> (Munich), 8/2018<br> </li>
-            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a> (Edinburgh), 1/2018-3/2018</li>
+            <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias Ehrhardt</a> (University of Cambridge), 1/2018-2/2018<br> </li>
-            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a> (Edinburgh), 10/2017-11/2017<br> </li>
+            <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 10/2017-11/2017<br> </li>
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 10/2017<br> </li>
             <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita Doikov</a> (HSE Moscow), 10/2017-11/2017<br> </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10/2017<br> </li>
@@ -143,7 +143,7 @@
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (HSE Moscow), 4/2017</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (ENS/Paris Dauphine), 4/2017</li>
-            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a> (Edinburgh), 3/2017-5/2017<br> </li>
+            <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 3/2017-5/2017<br> </li>
           </ul>
 
           <br>
@@ -196,7 +196,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
             </li>
 
             <li><a
-                href="http://www.maths.ed.ac.uk/people/show?person=479">Nicolas Loizou</a> (10/2015<span class="style1" style="width:
+                href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)
             <br>thesis: Randomized iterative methods for linear systems:   momentum, inexactness and gossip
             <br>   next position: postdoc at MILA, Montréal
