--- a/i_papers.html
+++ b/i_papers.html
@@ -77,6 +77,7 @@
 
           [140] Xun Qian, Peter Richtárik, and Tong Zhang<br>
           <b>Error compensated distributed SGD can be accelerated</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.00091">arXiv</a>] [code: ECLK]  <br>
           <br>
 
