--- a/i_papers.html
+++ b/i_papers.html
@@ -71,7 +71,7 @@
 
           [141] Robert M. Gower, Mark Schmidt, Francis Bach and Peter Richtárik<br>
           <b>Variance-reduced methods for machine learning</b><br>
-          To appear in Proceedings of the IEEE <br>
+          <a href="https://ieeexplore.ieee.org/document/9226504">Proceedings of the IEEE</a> <br>
           [<a href="https://arxiv.org/abs/2010.00892">arXiv</a>]   <br>
           <br>
 
