--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,12 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [145] Eduard Gorbunov, Dmitry Kovalev, Dmitry Makarenko, and Peter Richtárik<br>
+          <b>Linearly converging error compensated SGD</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2010.12292">arXiv</a>] [code: EC-SGD-DIANA, EC-LSVRG-DIANA, EC-LSVRGstar, ...]  <br>
+          <br>
+
           [144] Alyazeed Albasyoni, Mher Safaryan, Laurent Condat, and Peter Richtárik<br>
           <b>Optimal gradient compression for distributed and federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
@@ -59,8 +65,8 @@
 
           [143] Filip Hanzely, Slavomír Hanzely, Samuel Horváth, and Peter Richtárik<br>
           <b>Lower bounds and optimal algorithms for personalized federated learning</b><br>
-          <span class="important">Federated Learning Paper</span><br>
           NeurIPS 2020 <br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.02372">arXiv</a>] [code: APGD1, APGD2, IAPGD, AL2SGD+]  <br>
           <br>
 
