--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,13 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [146] Wenlin Chen, Samuel Horváth, and Peter Richtárik<br>
+          <b>Optimal client sampling for federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          NeurIPS 2020 Privacy Preserving Machine Learning Workshop <br>
+          [<a href="https://arxiv.org/abs/2010.13723">arXiv</a>] [code: OCS, AOCS]  <br>
+          <br>
+
           [145] Eduard Gorbunov, Dmitry Kovalev, Dmitry Makarenko, and Peter Richtárik<br>
           <b>Linearly converging error compensated SGD</b><br>
           <span class="important">Federated Learning Paper</span><br>
