--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <span class="important">New paper out: </span>
 <a href="https://arxiv.org/abs/2010.13723">"Optimal Client Sampling for Federated Learning"</a> -
-joint work with Wenlin Chen and, <a href="https://samuelhorvath.github.io">Samuel Horváth</a>.<br>
+joint work with Wenlin Chen, and <a href="https://samuelhorvath.github.io">Samuel Horváth</a>.<br>
 <br>
 
 Abstract: <i>
